# Data-Analytics-Learning-and-Projects

./: main.py  pyproject.toml
Chapter-2/: Chapter-2.ipynb
Chapter-3/: Chapter-3.ipynb
Chapter-3/Exercise/: faang_n.csv
Chapter-4/: Chapter-4.ipynb  Chapter_4.ipynb
Chapter-5/: Chapter_5.ipynb
Chapter-6/: Chapter_6.ipynb
Chapter-7/: financial_analysis.ipynb  test.ipynb
Chapter-7/stock_analysis/: setup.py
Chapter-7/stock_analysis/stock_analysis/: __init__.py  stock_analyzer.py  stock_modeler.py  stock_reader.py  stock_visualizer.py  utils.py
Chapter-7/stock_analysis/stock_analysis.egg-info/: PKG-INFO  SOURCES.txt
stock_analysis/stock_analysis/: __init__.py  stock_reader.py  utils.py
