[project]
name = "data-analytics-learning-and-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "ruff>=0.11.11",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.61",
]
